--- a/BlazorApp_Server/BlazorApp_Server.csproj
+++ b/BlazorApp_Server/BlazorApp_Server.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.5">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -19,6 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\BlazorApp_Business\BlazorApp_Business.csproj" />
     <ProjectReference Include="..\BlazorApp_DataAccess\BlazorApp_DataAccess.csproj" />
     <ProjectReference Include="..\BlazorApp_Models\BlazorApp_Models.csproj" />
   </ItemGroup>
