--- a/BlazorApp_Server/BlazorApp_Server.csproj
+++ b/BlazorApp_Server/BlazorApp_Server.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>528395f5-ccbc-43b2-aae3-328aee38cc3e</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
@@ -18,6 +19,8 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.5" />
+    <PackageReference Include="Syncfusion.Blazor.RichTextEditor" Version="21.2.6" />
+    <PackageReference Include="Syncfusion.Blazor.Themes" Version="21.2.6" />
   </ItemGroup>
 
   <ItemGroup>
