Add product price table to database

--- a/BlazorApp_Models/BlazorApp_Models.csproj
+++ b/BlazorApp_Models/BlazorApp_Models.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BlazorApp_DataAccess\BlazorApp_DataAccess.csproj" />
+  </ItemGroup>
+
 </Project>
